@@ -1,3 +1,9 @@
+2001-05-04  ??  <vajoczki@yahoo.com>
+
+	* src/bytecode.cpp(): Workaround for Sun JVM
+	TABLESWITCH bug in JDK 1.2, 1.3 which causes a
+	VerifyError (bug 167, 14.10-runtime-verifier-1)
+
 2001-05-01  Eric Blake  <ebb9@email.byu.edu>
 
 	* src/expr.cpp (FindVariableMember)
